# subcomp

./: LICENSE  README.md  docker-compose.yml  set_up.md
.github/workflows/: docker.yml
backend/: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  Rocket.toml
backend/migrations/2020-09-04-002215_no_teams/: up.sql
backend/migrations/2020-09-07-003708_checkboxes/: down.sql  up.sql
backend/migrations/2020-09-07-091403_auth/: up.sql
backend/migrations/2022-07-05-130712_categories/: up.sql
backend/public/: index.html
backend/src/: api.rs  catchers.rs  cors.rs  database.rs  files.rs  handlers.rs  main.rs  models.rs  responses.rs  schema.rs
data/: Dockerfile
frontend/: .dockerignore  Dockerfile  README.md  nginx.conf  package.json
frontend/public/: index.html  manifest.json
frontend/src/: App.js  Context.js  calls.js  index.js
frontend/src/components/: ChangeFullName.js  ChangeName.js  ChangePassword.js  DeleteProject.js  Header.js  LeaderboardNotice.js  LeaderboardRow.js  LeaderboardTable.js  LogIn.js  LogOut.js  ProjectCard.js  ProjectModal.js  ProjectsNotice.js  SignUp.js  SubmissionForm.js  SubmissionNotice.js
frontend/src/pages/: GameProjects.js  Leaderboard.js  MobileProjects.js  NotFound.js  OtherProjects.js  Profile.js  Projects.js  Reset.js  Submission.js  Verification.js  WebProjects.js
server/migrations/2020-09-07-091403_auth/: down.sql  up.sql
server/src/: files.rs  handlers.rs  schema.rs
site/: jsconfig.json
site/public/: manifest.json
site/src/: Routes.js  calls.js  index.js
site/src/components/: ChangePassword.js  LeaderboardTable.js  ProjectModal.js  ProjectsNotice.js  SignUp.js  SubmissionNotice.js
site/src/pages/: NotFound.js  Profile.js  Projects.js  Reset.js
