[package]
name = "backend"
version = "0.2.0"
authors = ["Michael Gribben <michaelgribbeninfo@gmail.com>"]
edition = "2018"

[dependencies]
uuid = { version = "0.8.1", features = ["serde", "v4"] }
chrono = { version = "0.4.15", features = ["serde"] }
argon2rs = "0.2.5"
rocket = "0.4.5"
rocket_contrib = { version = "0.4.5", features = ["json", "diesel_postgres_pool"] }
rocket_cors = "0.5.1"
diesel = { version = "1.4.5", features = ["postgres", "uuidv07", "chrono", "serde_json"] }
diesel-derive-enum = { version = "1", features = ["postgres"] }
dotenv = "0.15.0"
serde = "1.0.115"
serde_json = "1.0.57"
serde_derive = "1.0.115"
validator = "0.11.0"
validator_derive = "0.11.0"
r2d2 = "0.8.9"
r2d2-diesel = "1.0.0"
ring = "0.16.15"
rand = "0.7.3"
lettre = "0.10.0-alpha.1"
regex = "1.3.9"
